tests/fail/pal_stress_test_borrow_negative.stderr
error[E0455]: Returning reference to local variable 'e1' is unsafe
 --> tests/fail/pal_stress_test_borrow_negative.tk:59:13
   |
 59 |     return (&e1, &e2)
   |             ^
error[E0455]: Returning reference to local variable 'e2' is unsafe
 --> tests/fail/pal_stress_test_borrow_negative.tk:59:18
   |
 59 |     return (&e1, &e2)
   |                  ^
error[E0455]: Returning reference to local variable 'e1' is unsafe
 --> tests/fail/pal_stress_test_borrow_negative.tk:68:13
   |
 68 |     return (&e1, &e2)
   |             ^
error[E0455]: Returning reference to local variable 'e2' is unsafe
 --> tests/fail/pal_stress_test_borrow_negative.tk:68:18
   |
 68 |     return (&e1, &e2)
   |                  ^
